--- a/AIS.ClonalgPR/AIS.ClonalgPR.csproj
+++ b/AIS.ClonalgPR/AIS.ClonalgPR.csproj
@@ -13,6 +13,9 @@
     <None Update="Data\Proteins.fa">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\Proteins6.fa">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
